manifests/collabora.yaml
# Source: collabora-online/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  labels:
    helm.sh/chart: collabora-online-1.1.21
    app.kubernetes.io/name: collabora-online
    app.kubernetes.io/instance: collabora-online
    app.kubernetes.io/version: 24.04.7.2.1
    app.kubernetes.io/managed-by: Helm
    type: main
spec:
  type: ClusterIP
  ports:
  - port: 9980
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: collabora-online
    app.kubernetes.io/instance: collabora-online
    type: main
---
# Source: collabora-online/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  labels:
    helm.sh/chart: collabora-online-1.1.21
    app.kubernetes.io/name: collabora-online
    app.kubernetes.io/instance: collabora-online
    app.kubernetes.io/version: 24.04.7.2.1
    app.kubernetes.io/managed-by: Helm
spec:
  minReadySeconds: 0
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: collabora-online
      app.kubernetes.io/instance: collabora-online
      type: main
  template:
    metadata:
      annotations:
        confighash: config-557ffd45164594601a6afa26ff804fe8
        cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
      labels:
        app.kubernetes.io/name: collabora-online
        app.kubernetes.io/instance: collabora-online
        type: main
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: collabora
      securityContext:
        fsGroup: 100
      containers:
      - name: collabora-online
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - CHOWN
            - FOWNER
            - SYS_CHROOT
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 100
          seLinuxOptions:
          seccompProfile:
            type: RuntimeDefault
        image: 
          registry.opencode.de/bmi/opendesk/components/supplier/collabora/images/collabora-online-for-opendesk:24.04.9.2.1@sha256:749917bf9146d8507b3a63d422a30ebe4f499700421c30527e32f322a015c73d
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9980
          protocol: TCP
        startupProbe:
          httpGet:
            path: /
            port: 9980
            scheme: HTTP
          failureThreshold: 30
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 9980
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 4
        readinessProbe:
          httpGet:
            path: /
            port: 9980
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 2

        resources:
          limits:
            cpu: 99
            memory: 4Gi
          requests:
            cpu: 0.5
            memory: 512Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
# Source: collabora-online/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  labels:
    helm.sh/chart: collabora-online-1.1.21
    app.kubernetes.io/name: collabora-online
    app.kubernetes.io/instance: collabora-online
    app.kubernetes.io/version: 24.04.7.2.1
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/server-snippet: |
      # block admin and metrics endpoint from outside by default
      location /cool/getMetrics { deny all; return 403; }
      location /cool/adminws/ { deny all; return 403; }
      location /browser/dist/admin/admin.html { deny all; return 403; }
    nginx.ingress.kubernetes.io/upstream-hash-by: $arg_WOPISrc
spec:
  tls:
  - hosts:
    - office.opendesk.apps.digilab.network
    secretName: opendesk-certificates-tls
  rules:
  - host: office.opendesk.apps.digilab.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: collabora
            port:
              number: 9980
